--- a/proyecto-personal/style/styles.css
+++ b/proyecto-personal/style/styles.css
@@ -6,9 +6,11 @@ body{
 h1 {
     color:black;
     text-align: center;
-    font-size: 40px;
+    font-size: 50px;
     margin-right: 100px;
     margin-left: 100px;
+    text-decoration: underline;
+    font-family: Georgia, 'Times New Roman', Times, serif;
 }
 
 blockquote{
